<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) by MinterTeam. 2020
  ~ @link <a href="https://github.com/MinterTeam">Org Github</a>
  ~ @link <a href="https://github.com/edwardstock">Maintainer Github</a>
  ~
  ~ The MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/margin_edges"
    android:paddingTop="@dimen/margin_edges"
    android:paddingEnd="@dimen/margin_edges"
    >

    <TextView
        android:id="@+id/tx_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tx_send_success_dialog_description"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <network.minter.bipwallet.internal.views.widgets.BipCircleImageView
        android:id="@+id/tx_recipient_avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_edges_half"
        android:background="@drawable/bg_image_round_shadow"
        android:elevation="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_avatar_default"
        app:civ_border_color="@color/white"
        app:civ_border_overlay="true"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_description"
        />

    <TextView
        android:id="@+id/dialog_second_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_edges_half"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_recipient_avatar"
        tools:text="\@PavelDurov"
        />


    <network.minter.bipwallet.internal.views.widgets.WalletButton
        android:id="@+id/action_view_tx"
        style="@style/Wallet.Button.Transparent.BlueBorder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_edges_medium"
        android:text="@string/btn_view_tx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_second_value"
        />

    <network.minter.bipwallet.internal.views.widgets.WalletButton
        android:id="@+id/action_close"
        style="@style/Wallet.Button.Transparent.BlueBorder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_edges"
        android:text="@string/btn_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_view_tx"
        />

    <Space
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_edges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_close"
        />

</androidx.constraintlayout.widget.ConstraintLayout>